--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.18.1",
     "mongoose-sequence": "^6.0.1",
     "nodemailer": "^7.0.6",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
