--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": " index.js",
+    "dev": "nodemon index.js",
    "test":"node index.js"
   },
   "keywords": [],
