--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": " index.js",
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
    "test":"node index.js"
   },
   "keywords": [],
